Quick UI styling

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,6 +2,7 @@
     border: 1px solid rgba(143, 141, 141, 0.87);
     padding-left: 5px;
     background: #121212;
+    width: 250px;
     color: rgba(245, 245, 245, 0.87);
 }
 
